<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rB_easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/main_layout_dialog_board_size_easy"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rB_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_layout_dialog_board_size_medium"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rB_hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_layout_dialog_board_size_supreme"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rB_heavy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_layout_dialog_board_size_ultimate"
            android:textSize="24sp" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>